force-app/main/default/objects/Order/fields/BilltoContactId__c.field-meta.xml
<CustomField>
    <fullName>BilltoContactId__c</fullName>
    <label>BilltoContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>