force-app/main/default/objects/Order/fields/ERP_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Reference_ID__c</fullName>
    <label>ERP Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>