force-app/main/default/objects/Order/fields/Quick__c.field-meta.xml
<CustomField>
    <fullName>Quick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from the quote to automatically check Bill Now after It has been Calculated</description>
    <inlineHelpText>Mapped from the quote to automatically check Bill Now after It has been Calculated</inlineHelpText>
    <label>Quick</label>
    <type>Checkbox</type>
</CustomField>